# Joblytics

./: Makefile  README.md  co.py  docker-compose.yml  download-raw-data.sh  pyproject.toml  run-raw-data  test.py  test.txt
app/core/: settings.py
app/domain/: exceptions.py
app/infrastructure/http/: header_provider.py  http_client.py  scrape_client.py
app/infrastructure/http/data/: user_agents.txt
app/infrastructure/ingestion/: linkedin_scrapper.py
dbt_learning/: dbt_project.yml
dbt_learning/models/marts/: fct_spend_by_city.sql  schema.yml
dbt_learning/models/staging/: _src_analytics.yml  schema.yml  stg__addresses.sql  stg__cities.sql
notebooks/: Untitled.ipynb  linkedin.ipynb  test.ipynb
temp/raw-data/: cities.csv
